--- a/main.html
+++ b/main.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-	<form method="get" action="">
+	<form method="post  " action="">
 		<label id="name" for="name">Name</label>
-		<input type="text" placeholder="Name" id="name" require><br>
+		<input type="text" placeholder="Name" id="name" required><br>
 		<label id="email" for="email">Email</label>
-		<input type="email" placeholder="Email" id="email" require><br>
-		<input type="radio" value="male" name="gender" id="gender_m" require>
+		<input type="email" placeholder="Email" id="email" required><br>
+		<input type="radio" value="male" name="gender" id="gender_m" required>
 		<label for="male">Male</label><br>
-		<input type="radio" value="female" name="gender" id="gender_f" require>
+		<input type="radio" value="female" name="gender" id="gender_f" required>
 		<label for="female">Female</label><br>
 		<label for="multiSelect"></label>
 
@@ -25,17 +25,17 @@
 		</select><br>		
 
 		<label for="age">Age</label>
-		<input type="number" placeholder="Age" id="age" require><br>
+		<input type="number" placeholder="Age" id="age" required><br>
 		<label for="dob" >DOB</label>
-		<input type="date" id="dob" name="dob" require><br>
+		<input type="date" id="dob" name="dob" required><br>
 	   <label for="phone">Phone</label>
 		<input type="phone" id="phone" name="phone"><br>		
 		<label for="Pass">Password</label>
 		<input type="Password" id="pass" value="pass" name="pass"><br> 
 		<label for="checkbox">I agree to the TOS</label>
-		<input type="checkbox" id="tos" name="tos" value="tos" require>
+		<input type="checkbox" id="tos" name="tos" value="tos" required>
 		<br>
-		<input type="submit" value="Submit" id="submit" require>
+		<input type="submit" value="Submit" id="submit" required>
 	</form>
 	<!-- the entire body must be written by student -->
 	<script type="text/javascript" src="./script.js">
