--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form method="post  " action="">
+	<form method="post" action="">
 		<label id="name" for="name">Name</label>
 		<input type="text" placeholder="Name" id="name" required><br>
 		<label id="email" for="email">Email</label>
@@ -29,13 +29,14 @@
 		<label for="dob" >DOB</label>
 		<input type="date" id="dob" name="dob" required><br>
 	   <label for="phone">Phone</label>
-		<input type="phone" id="phone" name="phone"><br>		
+		<input type="tel" id="phone" name="phone"><br>		
 		<label for="Pass">Password</label>
-		<input type="Password" id="pass" value="pass" name="pass"><br> 
-		<label for="checkbox">I agree to the TOS</label>
+		<input type="Password" id="pass" value="pass" name="pass" required><br> 
+		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos" name="tos" value="tos" required>
 		<br>
-		<input type="submit" value="Submit" id="submit" required>
+		<input type="submit" value="Submit" id="submit" name="submit" required>
+    
 	</form>
 	<!-- the entire body must be written by student -->
 	<script type="text/javascript" src="./script.js">
