--- a/main.html
+++ b/main.html
@@ -29,9 +29,9 @@
 		<label for="dob" >DOB</label>
 		<input type="date" id="dob" name="dob" required><br>
 	   <label for="phone">Phone</label>
-		<input type="tel" id="phone" name="phone"><br>		
+		<input type="tel" id="tel" name="phone"><br>		
 		<label for="Pass">Password</label>
-		<input type="Password" id="pass" value="pass" name="pass" required><br> 
+		<input type="Password" id="Password" value="pass" name="pass" paceholder="Password" required><br> 
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos" name="tos" value="tos" required>
 		<br>
