--- a/main.html
+++ b/main.html
@@ -29,15 +29,14 @@
 		<label for="dob" >DOB</label>
 		<input type="date" id="dob" name="dob" required><br>
 	   <label for="phone">Phone</label>
-		<input type="tel" id="tel" name="phone"><br>		
-		<label for="Pass">Password</label>
+		<input type="Tel" id="tel" name="phone" paceholder="xxx-xxx-xxxx" ><br>		
+		<label for="Password">Password</label>
 		<input type="Password" id="Password" value="pass" name="pass" paceholder="Password" required><br> 
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos" name="tos" value="tos" required>
 		<br>
-		<input type="submit" value="Submit" id="submit" name="submit" required>
-    
-	</form>
+		<button input type="submit" value="submit">Submit</button>
+    	</form>
 	<!-- the entire body must be written by student -->
 	<script type="text/javascript" src="./script.js">
 	</script>
