--- a/main.html
+++ b/main.html
@@ -3,44 +3,91 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<form method="post" action="">
-		<label id="name" for="name">Name</label>
-		<input type="text" placeholder="Name" id="name" required><br>
-		<label id="email" for="email">Email</label>
-		<input type="email" placeholder="Email" id="email" required><br>
-		<input type="radio" value="male" name="gender" id="gender_m" required>
-		<label for="male">Male</label><br>
-		<input type="radio" value="female" name="gender" id="gender_f" required>
-		<label for="female">Female</label><br>
-		<label for="multiSelect"></label>
 
-		<select name="multiSelect" id="multiSelect"  paceholder="--Please choose an option--" multiple>
-			<option value="Golden">Golden Retriever</option>
-			<option value="Pomeranian">Pomeranian</option>
-			<option value="Shih">Shih Tzu</option>
-		</select><br>		
+<!-- the entire body must be written by student -->
 
-		<label for="age">Age</label>
-		<input type="number" placeholder="Age" id="age" required><br>
-		<label for="dob" >DOB</label>
-		<input type="date" id="dob" name="dob" required><br>
-	   <label for="phone">Phone</label>
-		<input type="Tel" id="tel" name="phone" paceholder="xxx-xxx-xxxx" ><br>		
-		<label for="Password">Password</label>
-		<input type="Password" id="Password" value="pass" name="pass" paceholder="Password" required><br> 
-		<label for="tos">I agree to the TOS</label>
-		<input type="checkbox" id="tos" name="tos" value="tos" required>
-		<br>
-		<button input type="submit" value="submit">Submit</button>
-    	</form>
-	<!-- the entire body must be written by student -->
-	<script type="text/javascript" src="./script.js">
-	</script>
+<form id="my-form" method="post">
 
+            <label for="name">Name</label>
+
+            <input type="text" id="name" placeholder='name' required>
+
+            <br>
+
+            <label for="email">Email</label>
+
+            <input type="email" id="email" placeholder='email' required>
+
+            <br>
+
+            <label for="gender_m">M</label>
+
+            <input type="radio" id="gender_m" name="gender" required>
+
+            <label for="gender">F</label>
+
+            <input type="radio" id="gender_f" name="gender" required>
+
+            <br>
+
+            <label for="cars">Choose your car</label>
+
+            <select name="cars" id="cars" required>
+
+        <option value="">--Please choose an option--</option>
+
+                    <option>BMW</option>
+
+                    <option>Audi</option>
+
+                    <option>Mercedes</option>
+
+            </select>
+
+            <br>
+
+            <label for="age">Age:</label>
+
+            <input type="number" id="age" min="0" placeholder="age" required>
+
+            <br>
+
+            <label for="dob">DOB</label>
+
+            <input type="date" id="dob" required>
+
+            <br>
+
+    <label for='tel'>Phone Number:</label>
+
+    <input type='tel' id='tel' placeholder='xxx-xxx-xxxx'>
+
+    <br>
+
+            <label for="password">Password</label>
+
+            <input type="password" id="password" placeholder="password" required>
+
+            <br>
+
+    <label for='tos'>I agree to the TOS</label>
+
+    <input type='checkbox' id='tos' required>
+
+    <br>
+
+            <button type="submit">Submit</button>
+
+    </form>
+
+<script type="text/javascript" src="./script.js">
+
+</script>
 </body>
 
 </html>
